dark mode hover color fix

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -123,6 +123,7 @@ form {
       border: none;
       padding: 0;
       margin: 0;
+      height: 0;
     }
   }
 
@@ -139,7 +140,8 @@ form {
     cursor: pointer;
     background-color: hsl(var(--honey), 100%, 75%);
     @media (prefers-color-scheme: dark) {
-      background-color: hsl(var(--denim), 25%, 75%);
+      background-color: hsl(var(--denim), 25%, 37.5%);
+      color: hsl(var(--denim), 25%, 87.5%);
     }
   }
 
